# unum_ops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  unum_ops.code-workspace
.claude/skills/optimization-journal/: SKILL.md
.claude/skills/optimization-journal/evals/: evals.json
.claude/skills/optimization-journal/references/: benchmark.py  final_kernel.py  test_cases.py
3rd/: sparse_kernel_extension-0.0.0-cp311-cp311-linux_x86_64.whl
benchmark/: test_infllmv2_attn_stage1.py  test_max_polling_1d.py  test_sparse_kernel.py
benchmark/output/: Performance_get_block_table.csv  Performance_infllmv2_attn_stage1.csv  Performance_max_pooling_1d.csv  performance_report.md  results.html
src/unum_ops/: __init__.py
src/unum_ops/infllm_v2/: __init__.py  infllmv2_attn_stage1.py  infllmv2_attn_stage1_triton.py  infllmv2_attn_stage1_triton_v2.py  max_pooling_1d_varlen.py
src/unum_ops/sparse_kernel_extension/: __init__.py  get_table_torch.py  get_table_triton.py
test/: pa.py  test_atb.py  test_infllmv2_attn_stage1.py  test_max_pooling_1d.py  test_pa.py  test_sparse_kernel.py  utils.py
