[project]
name = "unum_ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yanguan02", email = "yanguan_02@126.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "torch==2.9.0",
    "triton==3.5.0",
]

[project.scripts]
unum_ops = "unum_ops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
